# crucible

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
backend/: Cargo.toml  README.md
backend/src/: lib.rs
backend/src/db/: seeds.rs
backend/src/services/: feature_flags.rs  log_alerts.rs  mod.rs
backend/tests/: load_tests.rs
backend/tests/load/: profile_load.rs  status_load.rs
contracts/crucible/: Cargo.toml
contracts/crucible/src/: env.rs  fixture.rs  lib.rs  macros.rs  prelude.rs  token.rs
contracts/crucible/test_snapshots/env/tests/: test_mock_env_builder_basic.1.json  test_simulation_workflow.1.json
contracts/crucible/test_snapshots/token/tests/: test_burn_reduces_balance.1.json  (+5 more)
crucible-macros/: Cargo.toml
crucible-macros/src/: lib.rs
crucible-macros/tests/: fixture_tests.rs
crucible-macros/tests/ui/: fail-fixture-args.rs  fail-fixture-args.stderr  fail-missing-setup.rs  fail-missing-setup.stderr  fail-on-enum.rs  fail-on-enum.stderr  pass-basic.rs  pass-debug-already-derived.rs  pass-generic.rs
examples/counter/src/: test.rs
examples/escrow/src/: lib.rs  test.rs
examples/escrow/test_snapshots/test/: test_arbiter_approve_allows_early_claim.1.json  test_claim_after_timeout.1.json  test_claim_before_timeout_reverts.1.json  test_create_emits_event.1.json  test_create_transfers_tokens_to_contract.1.json  test_double_claim_reverts.1.json  test_only_arbiter_can_approve.1.json  test_refund_after_timeout.1.json  test_refund_before_timeout_reverts.1.json
examples/token/src/: lib.rs  test.rs
examples/vesting/src/: lib.rs  test.rs
